
== 0.3.3 2007-11-06

* Major enhancement(s):
* Minor enhancement(s):
  * Added error traps for ECHI_LOGS
* Bug fix(es):  
  * Fixed a bug where the utility was not properly deleting the files from the ftp server
  * Fixed a bug for the pco schema usage changing the echi_log column processed_at to processedat via the 005_change_log_processedat_name migration

== 0.3.4 2007-11-26

* Major enhancement(s):
* Minor enhancement(s):
  * Added a database test script to examples/db_connect_test.rb
  * Set the default ftp port in application.yml to 21
  * Properly report that the database has been initialized at the start of processing as opposed to a successful connection
  * Encapsulate the ASCII/BINARY database transactions in Begin/Rescue clauses to report on additional database issues that might arise
  * Changed the schema YML references to 'echi_records' from 'fields' in order to use that file to store additional database table definitions
  * Changed the default databse name to 'echi' in database.yml
  * Added 006_create_echi_aux_reasons.rb, 007_create_echi_cwcs.rb and 008_create_echi_vdns.rb migrations following the same format as 001_create_echi_records.rb
  * Startup sequence now shows which settings were used
  * Changed the application.yml setting of echi_update_agent_data to echi_process_dat_files
  * Refactored logging mechanism
  * Added support for additional '.dat' files including aux_rsn.dat, cwc.dat and vdn.dat
  * Added utf8 encoding option to config/database.yml
  * Refactored FTP management into a new class
  * FTP now supports setting an alternative port by setting 'echi_port' in the application.yml file
  * Added option in config/application.yml, 'max_ftp_sessions', to allow for multiple ftp sessions to be used to increase ftp interaction performance
* Bug fix(es):  

== 0.3.5 2007-12-TBD

* Major enhancement(s):
* Minor enhancement(s):
* Bug fix(es):  